--- a/views/index.html
+++ b/views/index.html
@@ -32,7 +32,7 @@
     }
   </style>
   <body>
-    <form action="/uploadData" method="post">
+    <form action="/uploadData" method="POST" enctype="multipart/form-data">
       <label for="name">Name</label>
       <input
         type="text"
@@ -53,7 +53,7 @@
       <input list="countries" id="countryInputBox" name="countries" required />
       <datalist id="countries"></datalist>
       <label for="resume">Upload Your Resume</label>
-      <input type="file" id="resume" name="resume" required />
+      <input type="file" id="resume" name="resume" required multiple />
       <input type="submit" value="Submit my Form" />
     </form>
   </body>
