--- a/views/index.html
+++ b/views/index.html
@@ -50,7 +50,13 @@
         required
       />
       <label for="countries">Country</label>
-      <input list="countries" id="countryInputBox" name="countries" required />
+      <input
+        list="countries"
+        id="countryInputBox"
+        name="countries"
+        placeholder="Which country are you living currently in?"
+        required
+      />
       <datalist id="countries"></datalist>
       <label for="resume">Upload Your Resume</label>
       <input type="file" id="resume" name="resume" required multiple />
@@ -65,7 +71,6 @@
     countrySuggestion.addEventListener("click", async () => {
       const response = await fetch("http://localhost:5000/countries");
       countriesData = await response.json();
-      console.log(countriesData);
       const options = countriesData.map((country) => {
         return `<option value="${country.code}"" style="width: 100%;height: 20px;">${country.name}</option>`;
       });
