added accept attribute to file input

--- a/views/index.html
+++ b/views/index.html
@@ -59,7 +59,13 @@
       />
       <datalist id="countries"></datalist>
       <label for="resume">Upload Your Resume</label>
-      <input type="file" id="resume" name="resume" required multiple />
+      <input
+        type="file"
+        id="resume"
+        name="resume"
+        required
+        accept="application/pdf"
+      />
       <input type="submit" value="Submit my Form" />
     </form>
   </body>
